--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
                 </li>
                 <li>
                   <span></span>
-                  <a href="tel:+79255718989" data-name="Приложения"
+                  <a href="tel:+79255718989" data-name="Игры"
                     >+7 (925) 571-89-89</a
                   >
                 </li>
                 <li>
                   <span></span>
-                  <a href="tel:+79645718989" data-name="CRM-системы"
+                  <a href="tel:+79645718989" data-name="Тестирование"
                     >+7 (964) 571-89-89</a
                   >
                 </li>
@@ -87,32 +87,44 @@
               <ul class="main__social">
                 <li>
                   <a href="https://telegram.me/ChestnyyEyb" target="_blank">
-                    <img src="./images/Telegram.png" alt="Telegram" />
+                    <img src="./images/Telegram.svg" alt="Telegram" />
                   </a>
                 </li>
                 <li>
                   <a href="mailto:lincoln@chestnyyeyb.ru" target="_blank">
-                    <img src="./images/E-Mail.png" alt="E-Mail" />
+                    <img src="./images/E-Mail.svg" alt="E-Mail" />
                   </a>
                 </li>
                 <li>
-                  <a href="https://www.pinterest.ru/chestnyyeyb/" target="_blank">
-                    <img src="./images/Pinterest.png" alt="Pinterest" />
+                  <a
+                    href="https://www.pinterest.ru/chestnyyeyb/"
+                    target="_blank"
+                  >
+                    <img src="./images/Pinterest.svg" alt="Pinterest" />
                   </a>
                 </li>
                 <li>
-                  <a href="https://www.youtube.com/c/ChestnyyEyb" target="_blank">
-                    <img src="./images/YouTube.png" alt="YouTube" />
+                  <a
+                    href="https://www.youtube.com/c/ChestnyyEyb"
+                    target="_blank"
+                  >
+                    <img src="./images/YouTube.svg" alt="YouTube" />
                   </a>
                 </li>
                 <li>
-                  <a href="https://2gis.ru/balashikha/firm/70000001085385845" target="_blank">
-                    <img src="./images/2GIS.png" alt="2GIS" />
+                  <a
+                    href="https://2gis.ru/balashikha/firm/70000001085385845"
+                    target="_blank"
+                  >
+                    <img src="./images/2GIS.svg" alt="2GIS" />
                   </a>
                 </li>
                 <li>
-                  <a href="https://www.google.com/maps/place/%D0%A7%D0%B5%D1%81%D1%82%D0%BD%D1%8B%D0%B9+%D0%AD%D0%B9%D0%B1/@55.7513313,37.9961601,17z/data=!3m1!4b1!4m5!3m4!1s0x414ac9b36900fedb:0x353403717f1383b1!8m2!3d55.7513313!4d37.9983488" target="_blank">
-                    <img src="./images/Google_Maps.png" alt="Google_Maps" />
+                  <a
+                    href="https://www.google.com/maps/place/%D0%A7%D0%B5%D1%81%D1%82%D0%BD%D1%8B%D0%B9+%D0%AD%D0%B9%D0%B1/@55.7513313,37.9961601,17z/data=!3m1!4b1!4m5!3m4!1s0x414ac9b36900fedb:0x353403717f1383b1!8m2!3d55.7513313!4d37.9983488"
+                    target="_blank"
+                  >
+                    <img src="./images/Google_Maps.svg" alt="Google_Maps" />
                   </a>
                 </li>
               </ul>
@@ -129,13 +141,13 @@
                   </li>
                   <li>
                     <span></span>
-                    <a href="tel:+79255718989" data-name="Приложения"
+                    <a href="tel:+79255718989" data-name="Игры"
                       >+7 (925) 571-89-89</a
                     >
                   </li>
                   <li>
                     <span></span>
-                    <a href="tel:+79645718989" data-name="CRM-системы"
+                    <a href="tel:+79645718989" data-name="Тестирование"
                       >+7 (964) 571-89-89</a
                     >
                   </li>
@@ -290,18 +302,18 @@
         <div class="overlay-inner-text">
           Компания ООО <span>«Честный Эйб»</span>, которая создаёт нашу игру,
           всегда открыта для общения. Мы не только разрабатываем игры, но и
-          готовы предложить свои услуги по созданию сайтов и приложений,
-          внедрению и поддержке CRM, а также консультациям и технической поддержке.
-          Вы можете связаться с создателем игры через следующие контакты:
+          готовы предложить свои услуги по созданию сайтов и приложений, а также
+          качественному тестированию ваших проектов. Вы можете связаться с
+          создателем игры через следующие контакты:
         </div>
         <ul class="overlay-inner-list">
           <li>
             <span>Телефоны:</span><br />
             <p>+7 (916) 571-89-89 - Разработка сайтов</p>
 
-            <p>+7 (925) 571-89-89 - Разработка приложений</p>
+            <p>+7 (925) 571-89-89 - Разработка игр</p>
 
-            <p>+7 (964) 571-89-89 - Разработка CRM-систем</p>
+            <p>+7 (964) 571-89-89 - Тестиование</p>
 
             <p>+7 (985) 571-89-89 - Симбиоз (сотрудничество)</p>
             <p>
@@ -818,7 +830,8 @@
         </p>
         <div class="overlay-inner-text">
           P.S. Помните, что даже гром начинается с маленькой искры. А ваша
-          поддержка — это та самая искра, которая помогает нам двигаться вперёд! 🌩️
+          поддержка — это та самая искра, которая помогает нам двигаться вперёд!
+          🌩️
         </div>
       </template>
       <!--template ПОЛИТИКА-->
@@ -929,7 +942,8 @@
         </p>
         <div class="overlay-inner-text">
           P.S. Помните, что даже маленькая искра может осветить путь. А ваше
-          доверие — это та самая искра, которая помогает нам двигаться вперёд! 🌩️
+          доверие — это та самая искра, которая помогает нам двигаться вперёд!
+          🌩️
         </div>
       </template>
       <!--template КОПИРАЙТ-->
