--- a/index.html
+++ b/index.html
@@ -1,10 +1,138 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-1P81G0D66K"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+      gtag("config", "G-1P81G0D66K");
+    </script>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/index.css" />
-    <title>Честный Эйб</title>
+    <title>IT-компания Честный Эйб</title>
+
+    <meta
+      name="description"
+      content="Добро пожаловать на официальный сайт российской игровой студии «Честный Эйб». Дом, где издаются игры для каждого"
+    />
+
+    <meta
+      name="keywords"
+      content="веб-разработка, сайт под ключ, разработка веб-приложений на заказ, тестирование приложений, seo оптимизация, продвижение в интернете"
+    />
+
+    <meta name="robots" content="index" />
+
+    <meta property="og:title" content="" />
+    <meta property="og:description" content="" />
+    <meta property="og:type" content="article" />
+    <meta property="og:image" content="" />
+    <meta property="og:image:alt" content="" />
+    <meta property="og:url" content="" />
+
+    <link
+      type="image/x-icon"
+      rel="shortcut icon"
+      href="assets/images/favicon/favicon.ico"
+    />
+    <link
+      type="image/png"
+      sizes="16x16"
+      rel="icon"
+      href="images/favicon/favicon-16.png"
+    />
+    <link
+      type="image/png"
+      sizes="32x32"
+      rel="icon"
+      href="images/favicon/favicon-32.png"
+    />
+    <link
+      type="image/png"
+      sizes="57x57"
+      rel="icon"
+      href="images/favicon/favicon-57.png"
+    />
+    <link
+      type="image/png"
+      sizes="60x60"
+      rel="icon"
+      href="images/favicon/favicon-60.png"
+    />
+    <link
+      type="image/png"
+      sizes="72x72"
+      rel="icon"
+      href="images/favicon/favicon-72.png"
+    />
+    <link
+      type="image/png"
+      sizes="76x76"
+      rel="icon"
+      href="images/favicon/favicon-76.png"
+    />
+    <link
+      type="image/png"
+      sizes="96x96"
+      rel="icon"
+      href="images/favicon/favicon-96.png"
+    />
+    <link
+      type="image/png"
+      sizes="114x114"
+      rel="icon"
+      href="images/favicon/favicon-114.png"
+    />
+    <link
+      type="image/png"
+      sizes="120x120"
+      rel="icon"
+      href="images/favicon/favicon-120.png"
+    />
+    <link
+      type="image/png"
+      sizes="128x128"
+      rel="icon"
+      href="images/favicon/favicon-128.png"
+    />
+    <link
+      type="image/png"
+      sizes="144x144"
+      rel="icon"
+      href="images/favicon/favicon-144.png"
+    />
+    <link
+      type="image/png"
+      sizes="152x152"
+      rel="icon"
+      href="images/favicon/favicon-152.png"
+    />
+    <link
+      type="image/png"
+      sizes="196x196"
+      rel="icon"
+      href="images/favicon/favicon-196.png"
+    />
+    <link
+      type="image/png"
+      sizes="250x250"
+      rel="icon"
+      href="images/favicon/favicon-250.png"
+    />
+    <link
+      type="image/png"
+      sizes="500x500"
+      rel="icon"
+      href="images/favicon/favicon-500.png"
+    />
   </head>
   <body>
     <div class="page">
@@ -129,7 +257,7 @@
                 </li>
               </ul>
               <div class="header__contacts header__contacts-mobile">
-                <div id="header__contacts" class="header__contacts-name">
+                <div id="header-contacts" class="header__contacts-name">
                   Контакты
                 </div>
                 <ul class="header__contacts-phones">
@@ -219,6 +347,7 @@
               <g>
                 <path
                   d="M76.563,490h336.875C455.547,490,490,455.547,490,413.438V76.563C490,34.453,455.547,0,413.437,0H76.563 C34.453,0,0,34.453,0,76.563v336.875C0,455.547,34.453,490,76.563,490z M124.835,175.445l50.61-50.611L245,194.39l69.555-69.555 l50.61,50.611L295.611,245l69.555,69.555l-50.61,50.611L245,295.611l-69.555,69.555l-50.61-50.61L194.389,245L124.835,175.445z"
+                  class="close-icon"
                 ></path>
               </g>
             </svg>
@@ -262,13 +391,13 @@
           персонажей и захватывающие приключения. Мы, герои, уже готовы к тому,
           чтобы выйти в свет и показать, на что способны. А пока — следите за
           новостями от «Честного Эйба»! Скоро вы узнаете больше о нашей игре и
-          сможете присоединиться к нашей борьбе против «NeuroCorp».
+          сможете присоединиться к нашей борьбе против «Eidovyrex».
         </div>
         <div class="overlay-inner-text">
           Спасибо, что верите в нас! И помните: даже маленькая компания может
           создать большую историю 🐾
         </div>
-        <div class="overlay-inner-separator"></div>
+        <hr class="overlay-inner-separator" />
         <p class="overlay-inner-title">Дополнительная информация:</p>
         <ul class="overlay-inner-list">
           <li><span>Название компании:</span> ООО «Честный Эйб»</li>
@@ -283,7 +412,7 @@
             новых проектов.
           </li>
         </ul>
-        <div class="overlay-inner-separator"></div>
+        <hr class="overlay-inner-separator" />
         <p class="overlay-inner-signature">Айкис 🐾</p>
       </template>
       <!--template КОНТАКТЫ-->
@@ -294,11 +423,11 @@
         <div class="overlay-inner-text-top">
           — Здравствуйте, дорогие друзья! Меня зовут Кими Иоки, и я — примкнула
           к команде «HeroSkAge». Если у вас есть вопросы, предложения или просто
-          желание поддержать нашу борьбу против «NeuroCorp», вы всегда можете
+          желание поддержать нашу борьбу против «Eidovyrex», вы всегда можете
           связаться с нами. Мы ценим каждого, кто готов внести свой вклад в наше
           общее дело.
         </div>
-        <div class="overlay-inner-separator"></div>
+        <hr class="overlay-inner-separator" />
         <div class="overlay-inner-text">
           Компания ООО <span>«Честный Эйб»</span>, которая создаёт нашу игру,
           всегда открыта для общения. Мы не только разрабатываем игры, но и
@@ -313,7 +442,7 @@
 
             <p>+7 (925) 571-89-89 - Разработка игр</p>
 
-            <p>+7 (964) 571-89-89 - Тестиование</p>
+            <p>+7 (964) 571-89-89 - Тестирование</p>
 
             <p>+7 (985) 571-89-89 - Симбиоз (сотрудничество)</p>
             <p>
@@ -346,7 +475,7 @@
           помогают нам становиться лучше. Ведь именно благодаря вам наша игра
           обретает жизнь и смысл.
         </div>
-        <div class="overlay-inner-separator"></div>
+        <hr class="overlay-inner-separator" />
         <p class="overlay-inner-title">Дополнительная информация:</p>
         <ul class="overlay-inner-list">
           <li>
@@ -395,11 +524,11 @@
           помочь нам — команде «HeroSkAge» и компании ООО «Честный Эйб», которая
           создаёт нашу игру.
         </div>
-        <div class="overlay-inner-separator"></div>
+        <hr class="overlay-inner-separator" />
         <p class="overlay-inner-title">Поддержка компании и разработчиков</p>
         <div class="overlay-inner-text">
           Мы — команда, которая верит, что вместе можно справиться с любыми
-          трудностями. И это касается не только борьбы с «NeuroCorp», но и
+          трудностями. И это касается не только борьбы с «Eidovyrex», но и
           создания игры, которая станет частью вашей жизни. Но чтобы всё
           получилось, нам нужна ваша помощь.
         </div>
@@ -437,7 +566,7 @@
             </p>
           </li>
         </ol>
-        <div class="overlay-inner-separator"></div>
+        <hr class="overlay-inner-separator" />
         <p class="overlay-inner-title">Дополнительная информация:</p>
         <ul class="overlay-inner-list">
           <li>
@@ -481,13 +610,13 @@
         <div class="overlay-inner-text-top">
           — Привет. Это Декмен. Я не люблю долгих разговоров, но сегодня скажу
           то, что важно. Мы — команда «HeroSkAge». Мы сражаемся против
-          «NeuroCorp», чтобы защитить то, что нам дорого. Но знаете, что самое
+          «Eidovyrex», чтобы защитить то, что нам дорого. Но знаете, что самое
           главное в любой битве? Это знать, что за твоей спиной есть те, кто
           тебя поддерживает. И сегодня я хочу рассказать, как вы можете помочь
           нам — не только мне и моим друзьям, но и компании ООО «Честный Эйб»,
           которая создаёт нашу игру.
         </div>
-        <div class="overlay-inner-separator"></div>
+        <hr class="overlay-inner-separator" />
         <p class="overlay-inner-title">Поддержка компании и разработчиков</p>
         <div class="overlay-inner-text">
           Мы — не просто группа людей. Мы — семья. И в этой семье каждый важен.
@@ -509,7 +638,7 @@
             <span>Делитесь идеями:</span>
             <p>
               У вас есть мысли о новых героях, сюжетах или способах борьбы с
-              «NeuroCorp»? Напишите нам! Мы всегда открыты для новых идей.
+              «Eidovyrex»? Напишите нам! Мы всегда открыты для новых идей.
             </p>
           </li>
           <li>
@@ -528,7 +657,7 @@
             </p>
           </li>
         </ol>
-        <div class="overlay-inner-separator"></div>
+        <hr class="overlay-inner-separator" />
         <p class="overlay-inner-title">Дополнительная информация:</p>
         <ul class="overlay-inner-list">
           <li>
@@ -576,12 +705,12 @@
           как вы можете поддержать нас — команду «HeroSkAge» и компанию
           <span>ООО «Честный Эйб»</span>, которая создаёт нашу игру.
         </div>
-        <div class="overlay-inner-separator"></div>
+        <hr class="overlay-inner-separator" />
         <p class="overlay-inner-title">Поддержка компании и разработчиков</p>
         <div class="overlay-inner-text">
           Мы — не просто команда, мы — семья. И в этой семье каждый важен. Даже
           Эхо Стрит, моя подруга со школы, недавно вышла на связь, чтобы помочь
-          нам в борьбе против «NeuroCorp». Это значит, что в игре вас ждёт ещё
+          нам в борьбе против «Eidovyrex». Это значит, что в игре вас ждёт ещё
           больше героев, историй и приключений! Но чтобы всё это стало
           реальностью, нам нужна ваша поддержка.
         </div>
@@ -618,7 +747,7 @@
             </p>
           </li>
         </ol>
-        <div class="overlay-inner-separator"></div>
+        <hr class="overlay-inner-separator" />
         <p class="overlay-inner-title">Дополнительная информация от Рейны</p>
         <ul class="overlay-inner-list">
           <li>
@@ -661,11 +790,11 @@
         <div class="overlay-inner-text-top">
           — Приветствую. Меня зовут Рэй Уайт, и я привык работать с точностью и
           аккуратностью. Если вы хотите поддержать нашу борьбу против
-          «NeuroCorp» или помочь компании ООО «Честный Эйб» в создании игры,
+          «Eidovyrex» или помочь компании ООО «Честный Эйб» в создании игры,
           которая станет частью вашей жизни, то ниже вы найдёте все необходимые
           реквизиты. Каждая деталь здесь важна, как и каждый ваш вклад.
         </div>
-        <div class="overlay-inner-separator"></div>
+        <hr class="overlay-inner-separator" />
         <p class="overlay-inner-title">Реквизиты компании ООО «Честный Эйб»</p>
         <ul class="overlay-inner-list">
           <li>
@@ -687,7 +816,7 @@
           <li><span>БИК:</span> 044525593</li>
           <li><span>Корреспондентский счёт:</span> 30101810200000000593</li>
         </ul>
-        <div class="overlay-inner-separator"></div>
+        <hr class="overlay-inner-separator" />
         <p class="overlay-inner-title">Для чего это нужно?</p>
         <p class="overlay-inner-subtitle">
           Эти реквизиты могут понадобиться, если вы хотите:
@@ -697,7 +826,7 @@
           <li>Заключить договор на сотрудничество.</li>
           <li>Уточнить детали для юридического взаимодействия.</li>
         </ul>
-        <div class="overlay-inner-separator"></div>
+        <hr class="overlay-inner-separator" />
         <p class="overlay-inner-title">Дополнительная информация:</p>
         <ul class="overlay-inner-list">
           <li>
@@ -747,7 +876,7 @@
           который помогает нам всем понимать, как правильно взаимодействовать с
           сайтом компании <span>ООО «Честный Эйб» </span> и будущей игрой.
         </div>
-        <div class="overlay-inner-separator"></div>
+        <hr class="overlay-inner-separator" />
         <p class="overlay-inner-title">Пользовательское соглашение</p>
         <div class="overlay-inner-text">
           Наш сайт — https://chestnyyeyb.ru/ — это место, где вы можете узнать
@@ -798,7 +927,7 @@
             </p>
           </li>
         </ol>
-        <div class="overlay-inner-separator"></div>
+        <hr class="overlay-inner-separator" />
         <p class="overlay-inner-title">Дополнительная информация:</p>
         <ul class="overlay-inner-list">
           <li>
@@ -841,13 +970,13 @@
         </div>
         <div class="overlay-inner-text-top">
           — Привет снова! Это снова я, Лей. Здесь я расскажу вам о том, как мы
-          заботимся о ваших данных. Ведь в мире, где «NeuroCorp» пытается
+          заботимся о ваших данных. Ведь в мире, где «Eidovyrex» пытается
           контролировать всё и всех, важно, чтобы ваша информация оставалась в
           безопасности. Наша <span>Политика конфиденциальности</span> — это
           документ, который объясняет, как мы собираем, используем и защищаем
           ваши данные на сайте https://chestnyyeyb.ru/.
         </div>
-        <div class="overlay-inner-separator"></div>
+        <hr class="overlay-inner-separator" />
         <p class="overlay-inner-title">Политика конфиденциальности</p>
         <ol class="overlay-inner-list">
           <li>
@@ -911,7 +1040,7 @@
             </p>
           </li>
         </ol>
-        <div class="overlay-inner-separator"></div>
+        <hr class="overlay-inner-separator" />
         <p class="overlay-inner-title">Дополнительная информация:</p>
         <ul class="overlay-inner-list">
           <li>
@@ -957,7 +1086,7 @@
           любовью и трудом. В этом разделе я расскажу вам о том, как мы бережём
           нашу игру и всё, что с ней связано.
         </div>
-        <div class="overlay-inner-separator"></div>
+        <hr class="overlay-inner-separator" />
         <p class="overlay-inner-title">Копирайт (©) ООО «Честный Эйб»</p>
         <div class="overlay-inner-text">
           Вся игра, её персонажи, истории, музыка, графика и даже такие мелочи,
@@ -985,7 +1114,7 @@
             </p>
           </li>
         </ul>
-        <div class="overlay-inner-separator"></div>
+        <hr class="overlay-inner-separator" />
         <p class="overlay-inner-title">Дополнительная информация:</p>
         <ul class="overlay-inner-list">
           <li>
