--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>IT-компания Честный Эйб</title>
+
     <!-- Google tag (gtag.js) -->
     <script
       async
@@ -14,23 +18,16 @@
       gtag("js", new Date());
       gtag("config", "G-1P81G0D66K");
     </script>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./css/index.css" />
-    <title>IT-компания Честный Эйб</title>
 
     <meta
       name="description"
       content="Добро пожаловать на официальный сайт российской игровой студии «Честный Эйб». Дом, где издаются игры для каждого"
     />
-
     <meta
       name="keywords"
       content="веб-разработка, сайт под ключ, разработка веб-приложений на заказ, тестирование приложений, seo оптимизация, продвижение в интернете"
     />
-
     <meta name="robots" content="index" />
-
     <meta property="og:title" content="" />
     <meta property="og:description" content="" />
     <meta property="og:type" content="article" />
@@ -38,101 +35,27 @@
     <meta property="og:image:alt" content="" />
     <meta property="og:url" content="" />
 
+    <!-- Favicons (упрощенный набор) -->
     <link
       type="image/x-icon"
       rel="shortcut icon"
-      href="assets/images/favicon/favicon.ico"
-    />
-    <link
-      type="image/png"
-      sizes="16x16"
-      rel="icon"
-      href="images/favicon/favicon-16.png"
+      href="./images/favicon/favicon.ico"
     />
     <link
       type="image/png"
       sizes="32x32"
       rel="icon"
-      href="images/favicon/favicon-32.png"
-    />
-    <link
-      type="image/png"
-      sizes="57x57"
-      rel="icon"
-      href="images/favicon/favicon-57.png"
-    />
-    <link
-      type="image/png"
-      sizes="60x60"
-      rel="icon"
-      href="images/favicon/favicon-60.png"
-    />
-    <link
-      type="image/png"
-      sizes="72x72"
-      rel="icon"
-      href="images/favicon/favicon-72.png"
-    />
-    <link
-      type="image/png"
-      sizes="76x76"
-      rel="icon"
-      href="images/favicon/favicon-76.png"
-    />
-    <link
-      type="image/png"
-      sizes="96x96"
-      rel="icon"
-      href="images/favicon/favicon-96.png"
-    />
-    <link
-      type="image/png"
-      sizes="114x114"
-      rel="icon"
-      href="images/favicon/favicon-114.png"
-    />
-    <link
-      type="image/png"
-      sizes="120x120"
-      rel="icon"
-      href="images/favicon/favicon-120.png"
-    />
-    <link
-      type="image/png"
-      sizes="128x128"
-      rel="icon"
-      href="images/favicon/favicon-128.png"
-    />
-    <link
-      type="image/png"
-      sizes="144x144"
-      rel="icon"
-      href="images/favicon/favicon-144.png"
-    />
-    <link
-      type="image/png"
-      sizes="152x152"
-      rel="icon"
-      href="images/favicon/favicon-152.png"
+      href="./images/favicon/favicon-32.png"
     />
     <link
       type="image/png"
       sizes="196x196"
       rel="icon"
-      href="images/favicon/favicon-196.png"
+      href="./images/favicon/favicon-196.png"
     />
-    <link
-      type="image/png"
-      sizes="250x250"
-      rel="icon"
-      href="images/favicon/favicon-250.png"
-    />
-    <link
-      type="image/png"
-      sizes="500x500"
-      rel="icon"
-      href="images/favicon/favicon-500.png"
-    />
+
+    <link rel="stylesheet" href="./css/index.css" />
+    <script type="module" src="./js/index.js" defer></script>
   </head>
   <body>
     <div class="page">
