--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <meta property="og:title" content="" />
     <meta property="og:description" content="" />
     <meta property="og:type" content="article" />
-    <meta property="og:image" content="" />
+    <meta property="og:image" content="./images/og/og.png" />
     <meta property="og:image:alt" content="" />
     <meta property="og:url" content="" />
 
