--- a/index.html
+++ b/index.html
@@ -21,19 +21,21 @@
 
     <meta
       name="description"
-      content="Добро пожаловать на официальный сайт российской игровой студии «Честный Эйб». Дом, где издаются игры для каждого"
+      content="Честный Эйб — начинающая студия разработки игр, создающая уникальные проекты для геймеров России и СНГ. Наш первый проект уже в разработке и скоро выйдет на RuStore. Следите за новостями, чтобы первыми узнать о релизе и стать частью нашего игрового сообщества!"
     />
     <meta
       name="keywords"
-      content="веб-разработка, сайт под ключ, разработка веб-приложений на заказ, тестирование приложений, seo оптимизация, продвижение в интернете"
+      content="разработка Android-игр, инди-проекты, игры на RuStore, игры от российских разработчиков, проекты в разработке, игры от начинающей студии, игры с оригинальным сюжетом, геймдев, indie-разработка"
     />
-    <meta name="robots" content="index" />
-    <meta property="og:title" content="" />
-    <meta property="og:description" content="" />
+    <meta name="author" content="ООО «Честный Эйб»">
+    <meta name="copyright" content="© 2019-2025 ООО «Честный Эйб». Все права защищены.">
+    <meta name="robots, follow" content="index" />
+    <meta property="og:title" content="Честный Эйб — разработка уникальных игр для России и СНГ" />
+    <meta property="og:description" content="Мы — начинающая студия разработки игр. Наш первый проект уже в разработке и скоро выйдет на RuStore. Присоединяйтесь к нашему сообществу!" />
     <meta property="og:type" content="article" />
-    <meta property="og:image" content="./images/og/og.png" />
-    <meta property="og:image:alt" content="" />
-    <meta property="og:url" content="" />
+    <meta property="og:image" content="./images/og/og_image.png" />
+    <meta property="og:image:alt" content="Разработка первой игры от Честного Эйба" />
+    <meta property="og:url" content="https://chestnyyeyb.ru/" />
 
     <!-- Favicons (упрощенный набор) -->
     <link
@@ -148,18 +150,18 @@
                 </li>
                 <li>
                   <a
-                    href="https://www.pinterest.ru/chestnyyeyb/"
+                    href="https://rutube.ru/channel/57018308/"
                     target="_blank"
                   >
-                    <img src="./images/Pinterest.svg" alt="Pinterest" />
+                    <img src="./images/RuTube.svg" alt="RuTube" />
                   </a>
                 </li>
                 <li>
                   <a
-                    href="https://www.youtube.com/c/ChestnyyEyb"
+                    href="https://www.pinterest.ru/chestnyyeyb/"
                     target="_blank"
                   >
-                    <img src="./images/YouTube.svg" alt="YouTube" />
+                    <img src="./images/Pinterest.svg" alt="Pinterest" />
                   </a>
                 </li>
                 <li>
@@ -892,7 +894,7 @@
           <img src="./images/Hero/Hero_5.png" alt="Placeholder Image" />
         </div>
         <div class="overlay-inner-text-top">
-          — Привет снова! Это снова я, Лей. Здесь я расскажу вам о том, как мы
+          — Привет! Это снова я, Лей. Здесь я расскажу вам о том, как мы
           заботимся о ваших данных. Ведь в мире, где «Eidovyrex» пытается
           контролировать всё и всех, важно, чтобы ваша информация оставалась в
           безопасности. Наша <span>Политика конфиденциальности</span> — это
