--- a/index.html
+++ b/index.html
@@ -27,26 +27,14 @@
       name="keywords"
       content="разработка Android-игр, инди-проекты, игры на RuStore, игры от российских разработчиков, проекты в разработке, игры от начинающей студии, игры с оригинальным сюжетом, геймдев, indie-разработка"
     />
-    <meta name="author" content="ООО «Честный Эйб»" />
-    <meta
-      name="copyright"
-      content="© 2019-2025 ООО «Честный Эйб». Все права защищены."
-    />
+    <meta name="author" content="ООО «Честный Эйб»">
+    <meta name="copyright" content="© 2019-2025 ООО «Честный Эйб». Все права защищены.">
     <meta name="robots, follow" content="index" />
-    <meta
-      property="og:title"
-      content="Честный Эйб — разработка уникальных игр для России и СНГ"
-    />
-    <meta
-      property="og:description"
-      content="Мы — начинающая студия разработки игр. Наш первый проект уже в разработке и скоро выйдет на RuStore. Присоединяйтесь к нашему сообществу!"
-    />
+    <meta property="og:title" content="Честный Эйб — разработка уникальных игр для России и СНГ" />
+    <meta property="og:description" content="Мы — начинающая студия разработки игр. Наш первый проект уже в разработке и скоро выйдет на RuStore. Присоединяйтесь к нашему сообществу!" />
     <meta property="og:type" content="article" />
     <meta property="og:image" content="./images/og/og_image.png" />
-    <meta
-      property="og:image:alt"
-      content="Разработка первой игры от Честного Эйба"
-    />
+    <meta property="og:image:alt" content="Разработка первой игры от Честного Эйба" />
     <meta property="og:url" content="https://chestnyyeyb.ru/" />
 
     <!-- Favicons (упрощенный набор) -->
@@ -80,7 +68,7 @@
               <h2>Честный Эйб</h2>
               <p>Общество с ограниченной ответственностью</p>
             </div>
-            <h2 class="header__title">Приключения скоро начнутся</h2>
+            <h1 class="header__title">Приключения скоро начнутся</h1>
             <div class="header__contacts">
               <div id="header-contacts" class="header__contacts-name">
                 Контакты
@@ -161,7 +149,10 @@
                   </a>
                 </li>
                 <li>
-                  <a href="https://rutube.ru/channel/57018308/" target="_blank">
+                  <a
+                    href="https://rutube.ru/channel/57018308/"
+                    target="_blank"
+                  >
                     <img src="./images/RuTube.svg" alt="RuTube" />
                   </a>
                 </li>
